--- a/Survey Form/index.html
+++ b/Survey Form/index.html
@@ -65,7 +65,7 @@
         <textarea placeholder="Your comments"></textarea>
       </label>
     </fieldset>
-    <input type="submit" id="submit">
+    <input type="submit" id="submit" value="Submit">
   </form>
 </body>
 </html>
